--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"userRepo":"https://github.com/subhamsahoo/MissionRnD-C-BinarySearchTree-Worksheet.git","currentTestResult":null,"workingDirectory":"C:\\Users\\SHUBHAM\\MissionRnDProjects\\binary tree"}
+{"gitStatus":"REPO_CREATED","testStatus":1,"submitStatus":0,"userRepo":"https://github.com/subhamsahoo/MissionRnD-C-BinarySearchTree-Worksheet.git","currentTestResult":true,"workingDirectory":"C:\\Users\\SHUBHAM\\MissionRnDProjects\\binary tree"}
